<resources>
    <string name="app_name">E-Commerce</string>
    <string name="enter_you_phone_number">Enter mobile number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="code_was_sent_to">Code was sent to</string>
    <string name="log_out">Log Out</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="send_otp">Send OTP</string>
    <string name="_880">+880</string>
    <string name="shoes_category">Shoes Category</string>
    <string name="glasses_category">Glasses Category</string>
    <string name="products_you_may_like">Products You May Like</string>
    <string name="variety_of_products">Variety of Products</string>
    <string name="details">Details</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sub_total">Sub Total</string>
    <string name="_00">00</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="signing_out">Signing Out!</string>
    <string name="proceed">Proceed</string>
    <string name="checkout_dialog_message">Your products are ready to be ordered with a total of %s /= Taka(including delivery charge). Cash is on delivery. Your profile details will be used to reach your address. Please proceed if everything is alright.</string>
    <string name="order">Order</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="bangla">Bangla</string>
    <string name="done">Done</string>
    <string name="fields_cant_be_empty">Fields cant be empty!</string>
    <string name="delete">Delete</string>
    <string name="delete_item_checkout">Are you sure you want to remove %s from the cart.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removed_from_cart">Removed From Cart!</string>
    <string name="order_placed_successfully">Your order has been placed successfully!</string>
    <string name="removed_from_wishlist">Removed from wishlist!</string>
    <string name="added_to_wishlist">Added to wishlist!</string>
    <string name="all_glasses">All Glasses</string>
    <string name="transparent">Transparent</string>
    <string name="sun_glass">Sun Glass</string>
    <string name="others">Others</string>
    <string name="all_shoes">All Shoes</string>
    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="order_status">Order Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="converse">Converse</string>
    <string name="round_glasses">Round Glasses</string>
    <string name="image_url">Image Url</string>
    <string name="rating">Rating</string>
    <string name="submit">Submit</string>
    <string name="no_cart_items">No cart items</string>
    <string name="home_converse">Converse</string>
    <string name="no_items">No items</string>
    <string name="round">Round</string>
    <string name="description">Description</string>
    <string name="no_wishlist_items">No wishlist items</string>
</resources>