<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="8dp"
    tools:context=".ui.fragments.product.AddProductFragment">


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_product_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_converse_shoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/converse" />

        <RadioButton
            android:id="@+id/rb_nike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nike" />

        <RadioButton
            android:id="@+id/rb_adidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adidas" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_round_glasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_glasses" />

        <RadioButton
            android:id="@+id/rb_transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transparent" />

        <RadioButton
            android:id="@+id/rb_sunglass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sun_glass" />
    </RadioGroup>

    <EditText
        android:id="@+id/edt_product_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_product_type" />

    <EditText
        android:id="@+id/edt_product_url"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/image_url"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_product_name" />

    <EditText
        android:id="@+id/edt_product_price"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/price"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_product_url" />

    <EditText
        android:id="@+id/edt_product_description"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/description"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_product_price" />

    <EditText
        android:id="@+id/edt_product_rating"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/rating"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_product_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        android:background="@drawable/custom_button"
        style="@style/CustomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_product_rating" />

    <ProgressBar
        android:id="@+id/pb_add_product"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_submit_product"
        app:layout_constraintStart_toStartOf="@+id/btn_submit_product"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_product" />
</androidx.constraintlayout.widget.ConstraintLayout>