<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="6dp"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="100dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/baseline_snowshoeing" />

        <TextView
            android:id="@+id/txt_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:ems="11"
            android:text="@string/product_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_product"
            app:layout_constraintTop_toTopOf="@+id/img_product" />

        <TextView
            android:id="@+id/txt_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:ems="11"
            android:maxLines="1"
            android:text="@string/product_price"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_counter"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_product"
            app:layout_constraintTop_toBottomOf="@+id/txt_product_name"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:text="@string/plus"
            android:textColor="@color/pink_700"
            android:background="@drawable/cart_product_counter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_product_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/zero"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_plus"
            app:layout_constraintTop_toBottomOf="@+id/btn_plus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_minus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cart_product_counter"
            android:backgroundTint="@color/pink_700"
            android:text="@string/minus"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/txt_counter"
            app:layout_constraintStart_toStartOf="@+id/txt_counter"
            app:layout_constraintTop_toBottomOf="@+id/txt_counter" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>