<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.profile.ProfileFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/CustomButton"
        android:background="@drawable/custom_button"
        android:text="@string/log_out"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_user_list" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_Constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:padding="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_user_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_user_name" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:src="@drawable/baseline_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/inner_Constraint"
        app:layout_constraintTop_toTopOf="@+id/inner_Constraint" />

    <ProgressBar
        android:id="@+id/pb_profile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:background="@drawable/custom_button"
        android:layout_marginTop="8dp"
        android:text="@string/change_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inner_Constraint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_user_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:background="@drawable/custom_button"
        android:layout_marginTop="8dp"
        android:text="@string/user_list"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_language" />

</androidx.constraintlayout.widget.ConstraintLayout>